# quota-tracker

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Taskfile.yml  flake.nix  install.sh  pyproject.toml  quota-tracker.spec  uninstall.sh
.github/workflows/: ci.yml  release.yml
assets/: coverage.json
frontend/: index.html  package-lock.json  package.json  screenshot.cjs  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts  utils.ts
frontend/src/components/charts/: ModelBarChart.tsx  QuotaBarChart.tsx  QuotaHistoryChart.tsx  StackedTokenChart.tsx  TokenBreakdownPie.tsx  TokenLineChart.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  MetricCard.tsx  ProgressBar.tsx  QuotaPanel.tsx  RangePicker.tsx  Spinner.tsx  ThemeToggle.tsx
frontend/src/contexts/: ProvidersContext.tsx
frontend/src/hooks/: useConfig.ts  useDashboard.ts  useProjectUsage.ts  useTheme.ts  useVersion.ts
frontend/src/pages/: Overview.tsx  ProviderDetail.tsx  Settings.tsx
nix/: module.nix  package.nix
quota_tracker/: __init__.py  __main__.py  _ui.py  _version.py  cli.py  config.py  daemon.py  installer.py  logging.py  paths.py
quota_tracker/api/: __init__.py  app.py  routes.py  schemas.py
quota_tracker/db/: __init__.py  queries.py  records.py  schema.py
quota_tracker/providers/: __init__.py  base.py  claude_ai.py  codex.py  copilot.py  gemini.py  http.py
tests/: conftest.py
tests/integration/: test_api_integration.py  test_api_snapshots.py  test_daemon_scheduler.py  test_db_integration.py
tests/snapshots/api/: expected_shapes.json
tests/unit/: test__ui.py  test_cli_api.py  test_cli_host_port.py  test_daemon.py  test_db.py  test_installer.py  test_logging.py  test_provider_claude_ai.py  test_provider_codex.py  test_provider_copilot.py  test_provider_gemini.py  test_providers_common.py  test_providers_http.py
